--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ main{
 
 div.carousel{
     position: relative;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 div.previous-button,
@@ -62,4 +66,11 @@ main img{
     height: 500px;
     object-fit: cover;
     display: block;
+}
+
+.description{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
